# planar-arm-ros2

./: README.md  frames_2026-04-02_18.25.08.gv  frames_2026-04-03_00.10.03.gv  frames_2026-04-03_21.34.51.gv
src/planar_arm_description/: CMakeLists.txt  package.xml
src/planar_arm_description/launch/: display.launch.py
src/planar_arm_description/rviz/: planar_arm.rviz
src/planar_arm_description/urdf/: planar_arm.urdf.xacro
src/planar_arm_kinematics/: CMakeLists.txt  package.xml
src/planar_arm_kinematics/planar_arm_kinematics/: fk_solver.py  ik_solver.py  test_ik_client.py
src/planar_arm_kinematics/srv/: ComputeIK.srv
